<resources>
    <string name="hello">Hello World, FiveStrikesProActivity!</string>
    <string name="app_name">FiveStrikesPro</string>
    <string name="speichern">Speichern</string>
    <string name="loeschen">Löschen</string>
	<string name="info">Info</string>
    <string name="ja">Ja</string>
    <string name="nein">Nein</string>
	<string name="einstellungen">Einstellungen</string>
	<string name="spieler_eingeben">Eingabe von Spielern</string>
	<string name="wurfecke_eingeben">Eingabe der Wurfecke</string>
	<string name="symbole">Symbole</string>
	<string name="notiz">Notizen</string>
	<string name="Import">Import</string>
	<string name="Export">Export</string>
	<string name="okay">OK</string>
	<string name="importData">Daten aus Lite-Version einfügen</string>
	<string name="importDatabase">Datenbank importieren</string>
	<string name="exportDatabase">Datenbank exportieren</string>
	<string name="importexportTitel">Import/Export</string>
	<string name="aktion_torwurf">Torwurf</string>
	<string name="aktion_fehlwurf">Fehlwurf</string>
	<string name="aktion_7m_fehlwurf">7m Fehlwurf</string>
	<string name="aktion_7m_tor">7m Tor</string>
	<string name="aktion_tg_tor">Tempogegenstoss Tor</string>
	<string name="aktion_tg_fehlwurf">Tempogegenstoss Fehlwurf</string>
	<string name="aktion_gelbekarte">Gelbe Karte</string>
	<string name="aktion_zweimin">Zwei Minuten</string>
	<string name="aktion_zweipluszwei">Zwei mal zwei Minuten</string>
	<string name="aktion_rotekarte">Rote Karte</string>
	<string name="aktion_wechsel">Spielerwechsel</string>
	<string name="aktion_techfehl">Technischer Fehler</string>
	<string name="aktion_aufstellung_heim">Aufstellung Heimmannschaft</string>
	<string name="aktion_aufstellung_auswaerts">Aufstellung Auswärtsmannschaft</string>
	<string name="aktion_auszeit_heim">Auszeit Heimmannschaft</string>
	<string name="aktion_auszeit_auswaerts">Auszeit Auswärtsmannschaft</string>
	<string name="importDatabaseComplete">Die Datenbank wurde erfolgreich importiert.</string>
	<string name="importDatabaseError">Der Import der Datenbank ist fehlgeschlagen. Schaue bitte nach, ob der Ordner \'sdcard\' eine Datei mit dem Namen \'fivestrikespro.db\' enthält.</string>
	<string name="exportDatabaseComplete">Die Datenbank wurde erfolgreich in den Ordner \'sdcard\' exportiert.</string>
	<string name="exportDatabaseError">Der Export der Datenbank ist fehlgeschlagen.</string>
	<string name="anwurfMsgboxTitel">Anwurf</string>
	<string name="anwurfMsgboxText">Bitte wähle aus, welche Mannschaft Anwurf hat.</string>
	<string name="anwurfHeim">Heim</string>
	<string name="anwurfAusw">Auswärts</string>
    <string name="uebersichtTitel">Übersicht</string>
    <string name="uebersichtMannschaft">Mannschaft</string>
    <string name="uebersichtSpiel">Spiel</string>
    <string name="uebersichtStatistik">Statistik</string>
    <string name="uebersichtInfo">Info</string>
    <string name="uebersichtSchnellesSpiel">Schnelles Spiel</string>
    <string name="uebersichtWebseite">Webseite</string>
    <string name="uebersichtDownload">Im-/Export</string>
    <string name="infoMsgboxTitel">Handbuch öffnen</string>
	<string name="infoMsgboxText">Dies öffnet das Handuch zu dieser App im PDF-Format. Internetzugang ist erforderlich.
	    						  Vorgang fortsetzen?</string>
	<string name="webMsgboxTitel">Five Strikes öffnen</string>
	<string name="webMsgboxText">Dies öffnet die Webseite Five Strikes mit mehr Informationen, Neuigkeiten und Information zur 
	    						 Handball-App Five Strikes. Vorgang fortsetzen?</string>
	<string name="importMsgboxTitel">Import</string>
	<string name="importMsgboxText">Durch den Import werden Daten zu Mannschaften und Spielern aus der Lite-Version in die Pro-Version importiert. Vorheriger 
	    							Export aus der Pro-Version erforderlich. ACHTUNG !!!!!!! Sämtliche Daten (auch Spiele) aus der Pro-Version werden gelöscht!!!!!!! 
	    							Sollen die Daten importiert werden? Dies kann einen Moment dauern.</string>
	<string name="importDatabaseMsgboxText">Durch den Import wird eine zuvor gespeicherte Datenbank importiert. Vorheriger 
	    							Export einer Five Strikes-Datenabnk ist erforderlich. ACHTUNG !!!!!!! Sämtliche vorhandenen 
	    							Daten werden gelöscht!!!!!!! Eine Wiederherstellung ist nicht möglich. 
	    							Sollen die Daten importiert werden? </string>
	<string name="importFertigMsgboxTitel">Import abgeschlossen</string>
	<string name="importFertigMsgboxText">Der Import wurde erfolgreich abgeschlossen.</string>
	<string name="importFehlMsgboxTitel">Import fehlgeschlagen</string>
	<string name="importFehlMsgboxText">Der Import der Datenbank ist fehlgeschlagen. Es wurde keine importfähige Datei gefunden. Gehe in der Five Strikes 
	    								Lite App in der Übersicht auf Export, um eine Datei zu erstellen.</string>
	<string name="mannschaftTitel">Mannschaften</string>
    <string name="mannschaftEditTitel">Mannschaft editieren</string>
    <string name="mannschaftName">Mannschaftsname</string>
    <string name="mannschaftKuerzel">Mannschaftskürzel</string>
    <string name="mannschaftSpielerVerwalten">Spieler verwalten</string>
    <string name="mannschaftSpielerImport">Spieler importieren</string>
    <string name="mannschaftMsgboxTitel">Löschen</string>
	<string name="mannschaftMsgboxText">Möchtest Du die Mannschaft wirklich löschen?</string>
	<string name="mannschaftDelMsgboxTitel">Löschen nicht möglich</string>
	<string name="mannschaftDelMsgboxText">Es existiert noch mindestens ein Spiel, in dem diese Mannschaft noch aktiv ist. 
	    								   Löschen ist daher nicht möglich. Lösche das / die betreffenden Spiel(e) und 
	    								   versuche es erneut.</string>
	<string name="teamEditInfoMsgboxTitel">Info</string>
	<string name="teamEditInfoMsgboxText">Du kannst Spielerdaten über eine CSV-Tabelle importieren. Erstelle dazu eine Tabelle ohne 
	    								  Überschrift. In die erste Spalte die Rückennummer, in die zweite Spalte den Spielernamen 
	    								  und in die dritte Spalte die Position: TW für Torwart, LA für Linksaußen, RL für 
	    								  Rückraum links, RM für Rückraum mitte, RR für Rückraum rechts, RA für Rechtsaußen, 
	    								  KL für Kreisläufer. Speicher die Datei dann in dem Ordner sdcard/Download/ unter dem Namen Player.csv ab. 
	    								  Eine Beispieldatei findest Du auf der Webseite www.fivestrikes.de 
	    								  im Bereich Download. Gehe dann 
	    								  in der App auf Spieler importieren um den Import durchzuführen.</string>
	<string name="teamEditFertigMsgboxTitel">Import</string>
	<string name="teamEditFertigMsgboxText">Der Import der Spielerdaten wurde erfolgreich durchgeführt.</string>
	<string name="teamEditFehlerMsgboxTitel">Import</string>
	<string name="teamEditFehlerMsgboxText">Der Import der Spielerdaten konnte nicht durchgeführt werden. Stelle sicher, dass die 
	    									Datei Player.csv in dem Ordner sdcard/Download/ abgespeichert ist.</string>
	<string name="spielerTitel">Spieler</string>
	<string name="spielerEditTitel">Spieler editieren</string>
	<string name="spielerName">Spielername</string>
	<string name="spielerNummer">Rückennummer</string>
	<string name="spielerPosition">Position</string>
	<string name="spielerMsgboxTitel">Löschen</string>
	<string name="spielerMsgboxText">Möchtest Du den Spieler wirklich löschen?</string>
	<string name="spielerDelMsgboxTitel">Löschen nicht möglich</string>
	<string name="spielerDelMsgboxText">Es existiert noch mindestens ein Spiel, in dem dieser Spieler noch aktiv ist. 
	    								Löschen ist daher nicht möglich. Lösche das / die betreffenden Spiel(e) und 
	    								versuche es erneut.</string>
    <string name="positionen_prompt">Position wählen</string>
    <string name="spielerPositionTorwart">Torwart</string>
    <string name="spielerPositionLinksaussen">Linksaußen</string>
    <string name="spielerPositionRueckraumLinks">Rückraum links</string>
    <string name="spielerPositionRueckraumMitte">Rückraum mitte</string>
    <string name="spielerPositionRueckraumRechts">Rückraum rechts</string>
    <string name="spielerPositionRechtsaussen">Rechtsaußen</string>
    <string name="spielerPositionKreislaeufer">Kreisläufer</string>
    <string name="spielerPositionTorwartKurz">TW</string>
    <string name="spielerPositionLinksaussenKurz">LA</string>
    <string name="spielerPositionRueckraumLinksKurz">RL</string>
    <string name="spielerPositionRueckraumMitteKurz">RM</string>
    <string name="spielerPositionRueckraumRechtsKurz">RR</string>
    <string name="spielerPositionRechtsaussenKurz">RA</string>
    <string name="spielerPositionKreislaeuferKurz">KL</string>
    <string-array name="positionen">
        <item>Bitte auswählen</item>
        <item>Torwart</item>
        <item>Linksaußen</item>
        <item>Rückraum links</item>
        <item>Rückraum mitte</item>
        <item>Rückraum rechts</item>
        <item>Rechtsaußen</item>
        <item>Kreisläufer</item>
    </string-array>
	<string name="spielTitel">Spiele</string>
	<string name="spielEditTitel">Spiel editieren</string>
	<string name="spielDatum">Datum</string>
	<string name="spielLaenge">Halbzeitlänge</string>
	<string name="spielHeim">Heimmannschaft</string>
	<string name="spielHeimTeam">Heim</string>
	<string name="spielAusw">Auswärtsmannschaft</string>
	<string name="spielAuswTeam">Auswärts</string>
	<string name="spielTicker">Ticker aufrufen</string>
	<string name="mannschaftAuswahl">Mannschaft wählen</string>
	<string name="spielMsgboxTitel">Speichern nicht möglich</string>
	<string name="spielMsgboxText">Es sind noch nicht alle Angaben gemacht. Speichern daher nicht möglich.</string>
	<string name="tickerMsgboxTitel">Spielstart nicht möglich</string>
	<string name="tickerMsgboxText">Es sind noch nicht alle Angaben gemacht. Der Start des Spiels ist daher nicht möglich.</string>
	<string name="spielDelMsgboxTitel">Löschen</string>
	<string name="spielDelMsgboxText">Möchtest Du das Spiel wirklich löschen?</string>
	<string name="spielTeamauswahlMsgboxTitel">Auswahl nicht möglich</string>
	<string name="spielTeamauswahlMsgboxText">Bei diesem Spiel wurden bereits Aktionen eingegeben. 
	    									  Eine Änderung der Mannschaften ist daher nicht mehr möglich.
	    									  Um die Mannschaft ändern zu können müssen alle Aktionen im Ticker 
	    									  gelöscht werden.</string>
	<string name="spielGegnerauswahlMsgboxText">Auswahl nicht möglich. Du hast diese Mannschaft schon für den 
	    										Gegner ausgewählt</string>
	<string name="tickerTitel">Ticker</string>
	<string name="tickerAktionTitel">Aktion</string>
	<string name="tickerSpielerTitel">Spieler</string>
	<string name="tickerMSGBoxAktionTitel">Ballverlust</string>
	<string name="tickerMSGBoxAktionNachricht">Führte die Aktion zu einem Ballverlust?</string>
	<string name="tickerMSGBoxJa">Ja</string>
	<string name="tickerMSGBoxNein">Nein</string>
	<string name="tickerMSGBoxSpielzeit">Spielzeit:</string>
	<string name="tickerMSGBoxEinstellen">Einstellen</string>
	<string name="tickerDelMsgboxTitel">Löschen</string>
	<string name="tickerDelMsgboxText">Möchtest Du die Tickermeldung wirklich löschen?</string>
	<string name="tickerAktionTor">Tor</string>
	<string name="tickerAktionFehlwurf">Fehlwurf</string>
	<string name="tickerAktionTechnischerFehler">Technischer Fehler</string>
	<string name="tickerAktion7mTor">7m Tor</string>
	<string name="tickerAktion7mFehlwurf">7m Fehlwurf</string>
	<string name="tickerAktionTempogegenstossTor">TG Tor</string>
	<string name="tickerAktionTempogegenstossFehlwurf">TG Fehlwurf</string>
	<string name="tickerAktionWechsel">Wechsel</string>
	<string name="tickerAktionEinwechselung">Einwechselung</string>
	<string name="tickerAktionAuswechselung">Auswechselung</string>
	<string name="tickerAktionStartaufstellung">Startaufstellung</string>
	<string name="tickerAktionStartaufstellung2Halbzeit">Startaufstellung 2. Halbzeit</string>
</resources>