<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:paddingLeft="10dp"
  android:paddingRight="10dp"
  android:orientation="vertical"
  android:background="@drawable/hintergrund">
  
	<TextView 
	    android:text="@string/spielDatum" 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="left|bottom"
        android:textColor="@color/standardfarbe"
        android:textStyle="bold"
        android:textSize="17dip" 
	/>

    <Button 
        android:id="@+id/spielDatum"
        android:background="@drawable/grossblau"
        android:layout_width="fill_parent"
        android:layout_height="37dp"
        android:text="@string/spielDatum"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="15dip" 
    />	
	
	<TextView 
	    android:text="@string/spielLaenge" 
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:gravity="left|bottom"
        android:textColor="@color/standardfarbe"
        android:textStyle="bold"
        android:textSize="17dip" 
	/>

	<EditText 
	    android:id="@+id/spielHalbzeitlaenge"
	    android:inputType="phone"
	    android:maxLength="2"
		android:layout_width="136dp"
        android:layout_height="40dp"
	/>
	
	<TextView 
	    android:text="@string/spielHeim" 
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:gravity="left|bottom"
        android:textColor="@color/standardfarbe"
        android:textStyle="bold"
        android:textSize="17dip" 
	/>

    <Button 
        android:id="@+id/spielHeim"
        android:background="@drawable/grossblau"
        android:layout_width="fill_parent"
        android:layout_height="37dp"
        android:text="@string/spielHeimTeam"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="15dip" 
    />	
	
    <TextView 
	    android:text="@string/spielAusw" 
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:gravity="left|bottom"
        android:textColor="@color/standardfarbe"
        android:textStyle="bold"
        android:textSize="17dip" 
	/>

    <Button 
        android:id="@+id/spielAusw"
        android:background="@drawable/grossblau"
        android:layout_width="fill_parent"
        android:layout_height="37dp"
        android:text="@string/spielAuswTeam"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="15dip" 
    />	

    <Button 
        android:id="@+id/ticker"
        android:background="@drawable/buttonmittelorange"
        android:layout_width="208dp"
        android:layout_height="37dp"
        android:text="@string/spielTicker"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="15dip" 
        android:layout_marginTop="30dp"
    />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:gravity="bottom"
    > 
        
        <TableRow
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content" 
        	android:layout_marginBottom="10dp"
        >
        	
        	<Button 
        		android:id="@+id/save"
        		android:background="@drawable/kleingruen"
        		android:layout_width="fill_parent"
        		android:layout_height="37dp"
        		android:text="@string/speichern"
        		android:textColor="@android:color/white"
        		android:textSize="15dip" 
        		android:layout_weight="1"
        		android:layout_marginRight="10dp"
    		/>
        	
        	<Button 
        		android:id="@+id/delete"
        		android:background="@drawable/kleinrot"
        		android:layout_width="fill_parent"
        		android:layout_height="37dp"
        		android:text="@string/loeschen"
        		android:textColor="@android:color/white"
        		android:textSize="15dip" 
        		android:layout_weight="1"
        		android:layout_marginLeft="10dp"
    		/>
        
        </TableRow>
        
    </TableLayout>

</LinearLayout>