<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:paddingLeft="25dp"
  android:paddingRight="25dp"
  android:orientation="vertical"
  android:background="@drawable/hintergrund">
  
	<TextView 
	    android:text="@string/spielerName" 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="left|bottom"
        android:textColor="@color/standardfarbe"
        android:textStyle="bold"
        android:textSize="17dip" 
	/>
        
	<EditText
	    android:id="@+id/spielerName"
	    android:inputType="text"
	    android:layout_width="fill_parent"
        android:layout_height="40dp"
	/>

	<TextView 
	    android:text="@string/spielerNummer" 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="left|bottom"
        android:textColor="@color/standardfarbe"
        android:textStyle="bold"
        android:textSize="17dip" 
	/>

	<LinearLayout
  		android:layout_width="fill_parent"
  		android:layout_height="40dp"
  		android:orientation="horizontal"
  		>
  		
		<EditText 
	    	android:id="@+id/spielerNummer"
	    	android:inputType="phone"
	    	android:maxLength="2"
			android:layout_width="136dp"
        	android:layout_height="40dp"
		/>
		
		<LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="40dp" 
        	android:orientation="vertical"
    	> 
    	
			<Button 
        		android:id="@+id/okay"
        		android:background="@drawable/kleingruen"
        		android:layout_width="60dp"
        		android:layout_height="34dp"
        		android:text="@string/okay"
        		android:textColor="@android:color/white"
        		android:textSize="15dip" 
        		android:layout_gravity="right"
    		/>
			
		</LinearLayout>
		
	</LinearLayout>
	
	<TextView 
	    android:text="@string/spielerPosition" 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="left|bottom"
        android:textColor="@color/standardfarbe"
        android:textStyle="bold"
        android:textSize="17dip" 
	/>
		
	<Spinner
        android:id="@+id/spinnerPositionen"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:entries="@array/positionen"
        android:prompt="@string/positionen_prompt" 
    />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" 
        android:gravity="bottom"
    > 
        
        <TableRow
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content" 
        	android:layout_marginBottom="50dp"
        >
        	
        	<Button 
        		android:id="@+id/savePlayer"
        		android:background="@drawable/kleingruen"
        		android:layout_width="fill_parent"
        		android:layout_height="37dp"
        		android:text="@string/speichern"
        		android:textColor="@android:color/white"
        		android:textSize="15dip" 
        		android:layout_weight="1"
        		android:layout_marginRight="10dp"
    		/>
        	
        	<Button 
        		android:id="@+id/deletePlayer"
        		android:background="@drawable/kleinrot"
        		android:layout_width="fill_parent"
        		android:layout_height="37dp"
        		android:text="@string/loeschen"
        		android:textColor="@android:color/white"
        		android:textSize="15dip" 
        		android:layout_weight="1"
        		android:layout_marginLeft="10dp"
    		/>
        
        </TableRow>
        
    </TableLayout>

</LinearLayout>